--- a/jay+.theme.css
+++ b/jay+.theme.css
@@ -1,17 +1,10 @@
 /**
-  * @name Dark+
-  * @author DevEvil
-  * @version Dark+5.1
-  * @description Highly customized dark and purple theme for Discord
-  * @authorId 468132563714703390
-  * @authorLink https://devevil.com
-  * @source https://github.com/DevEvil99/DarkPlus-Discord-Theme
-  * @website https://devevil.com
-  * @donate https://devevil.com/dnt
-  * @invite jsQ9UP7kCA
+  * @name jay+
+  * @author jayjaybest9
+  * @version jay+5.1
 */
 
-@import url('https://devevil99.github.io/devevil/BetterDiscordAddons/Theme/Dark+/Dark+.theme.css');
+@import url('https://github.com/jayjaybest9/MyBetterDiscordTheme/blob/main/jay%2B.theme.css');
 
 :root {
   --darkplus-bg: #212121;
